<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expenditure_registration_intro"
        android:id="@+id/expenditure_registration_intro"
        android:gravity="center"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:id="@+id/amountExpenditureTextView"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amountExpenditureEditText"
        android:layout_gravity="center_horizontal"
        android:hint="Enter Amount"
        android:gravity="center"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usage"
        android:id="@+id/whereSpentTextView"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/whereSpentEditText"
        android:layout_gravity="center_horizontal"
        android:hint="Enter Usage"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/dateExpenditureTextView"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateExpenditureEditText"
        android:hint="Enter Date"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/timeExpenditureTextView"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/timeExpenditureEditText"
        android:hint="Enter Time"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_spent"
        android:id="@+id/placeSpentExpenditureTextView"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/placeSpentExpenditureEditText"
        android:hint="Enter Place of Spending"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:id="@+id/submitExpenditure"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"
                android:layout_marginLeft="41dp"
                android:layout_marginStart="41dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:textColor="@color/black"
                android:id="@+id/resetExpenditure"
                style="?android:attr/buttonBarButtonStyle"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/submitExpenditure"
                android:layout_toEndOf="@+id/submitExpenditure" />


    </RelativeLayout>
</LinearLayout>
