<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/login_appName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="30dp"
        android:textSize="30sp"
        android:fontFamily="cursive"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_screen"
        android:id="@+id/login_screen_intro"
        android:layout_below="@+id/login_appName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="22sp"
        android:fontFamily="cursive"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/usernameLogin"
        android:textColor="@color/black"
        android:layout_below="@+id/login_screen_intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/passwordLogin"
        android:layout_below="@+id/usernameLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>
    <Button android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="No account yet? Create one!"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@color/transparent"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/passwordLogin"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"/>

    <CheckBox
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Remember User Credentials!"
        android:id="@+id/remember"
        android:layout_gravity="center"
        android:layout_below="@+id/link_signup"
        android:layout_alignLeft="@+id/btn_login"
        android:layout_alignStart="@+id/btn_login" />
</RelativeLayout>
